# momentous-rs

./: Cargo.toml  LICENSE  notes.md
docs/decisions/: 001-domain-for-datetimes.md  002-store-leap-seconds-in-chronology.md
src/: cursor.rs  datetime.rs  div_rem.rs  duration.rs  gregorian_normalized_date.rs  instant.rs  least_common_width.rs  lib.rs  period.rs  scale.rs  shared_vec_cursor.rs  slice_cursor.rs  widen.rs  zoneinfo.rs
src/gregorian/: date_time.rs
src/iso8601/: chronology.rs  date_time.rs  date_time_builder.rs  date_time_with_carry.rs  fooiso8601.rs  mod.rs  precision.rs  util.rs
