[package]
name = "momentous"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2"
zoneinfo_compiled = "0.5"
lazy_static = "1.4.0"
libc = "0.2"
thiserror = "1"
numcmp = { version = "0.1.0" }
num-rational = "0.4.1"
num-integer = "0.1.46"